# RedditAPI-Tableau

./: .gitignore  README.md  pyproject.toml
etl/: RedditDataProcessor.py  RedditGet.py  main.py
gold/: tableau_posts.csv
raw/: tableau_comments.parquet.gzip  tableau_posts.parquet.gzip
